<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="makerprice.com.makerpriceufrpe.projeto.gui.ProjetoMainActivity"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true">
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/projeto_imagem_principal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/one"
        android:onClick="onButtonClick"/>

    <TextView
        android:id="@+id/nome_titulo_projeto_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_nome"
        android:textSize="16sp"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="12dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/projeto_imagem_principal"
        android:background="@drawable/rectangule_blue"
        />

    <TextView
        android:id="@+id/nome_projeto_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty_text"
        android:textSize="16sp"
        android:layout_marginTop="18dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/nome_titulo_projeto_main"/>

    <TextView
        android:id="@+id/descricao_titulo_projeto_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastro_projeto_descricao"
        android:textSize="16sp"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="18dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/nome_projeto_main"
        android:background="@drawable/rectangule_blue"
        />

    <TextView
        android:id="@+id/descricao_projeto_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty_text"
        android:textSize="16sp"
        android:scrollbars="vertical"
        android:layout_marginTop="18dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/descricao_titulo_projeto_main" />

    <TextView
        android:id="@+id/plataforma_titulo_projeto_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastro_projeto_texto_plataforma"
        android:textSize="16sp"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="18dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/descricao_projeto_main"
        android:background="@drawable/rectangule_blue"
        />

    <TextView
        android:id="@+id/plataforma_projeto_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty_text"
        android:textSize="16sp"
        android:layout_marginTop="18dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/plataforma_titulo_projeto_main" />

    <TextView
        android:id="@+id/aplicacao_titulo_projeto_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastro_projeto_texto_aplicacao"
        android:textSize="16sp"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="18dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/plataforma_projeto_main"
        android:background="@drawable/rectangule_blue"
        />

    <TextView
        android:id="@+id/aplicacao_projeto_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty_text"
        android:textSize="16sp"
        android:layout_marginTop="18dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/aplicacao_titulo_projeto_main" />

    <TextView
        android:id="@+id/comp_titulo_projeto_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/projeto_main_componentes"
        android:textSize="16sp"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="18dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/aplicacao_projeto_main"
        android:background="@drawable/rectangule_blue"
        />

    <TextView
        android:id="@+id/comp1_projeto_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty_text"
        android:textSize="16sp"
        android:layout_marginTop="18dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/comp_titulo_projeto_main" />
    <TextView
        android:id="@+id/comp2_projeto_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty_text"
        android:textSize="16sp"
        android:layout_marginTop="18dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/comp1_projeto_main" />

    <TextView
        android:id="@+id/comp3_projeto_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty_text"
        android:textSize="16sp"
        android:layout_marginTop="18dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/comp2_projeto_main" />



</RelativeLayout>
</ScrollView>